<resources>
    <string name="app_name">S_cheduler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture">CAPTURE</string>
    <string name="gallery">GALLERY</string>
    <string name="finish">Finish</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="board">Board</string>
    <string name="home">Home</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="title_s">슥</string>
    <string name="textview">TextView</string>
    <string name="tab3_disable_text">Tab3 Disable text</string>
    <string name="tab1_finish_text">tab1_finish_text</string>
    <string name="event_date">Event Date</string>
    <string name="image">image</string>
    <string name="event_title">Event Title</string>
    <string name="result">일정 등록이 불가합니다.</string>
    <string name="date">date</string>
    <string name="user1_gmail_com">user1@gmail.com</string>
    <string name="from">From</string>
    <string name="thu_september_13_2018">Thu, September 13 2018</string>
    <string name="to">To</string>
    <string name="all_day">All-day</string>
    <string name="timezone">Timezone</string>
    <string name="pacific_standard_time">Pacific Standard Time</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="page_title">Page Title</string>
    <string name="event_name">Event Name</string>
    <string name="시작">시작</string>
    <string name="end_date">End date</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="material_calendar_monday">Mon</string>
    <string name="material_calendar_tuesday">Tue</string>
    <string name="material_calendar_wednesday">Wed</string>
    <string name="material_calendar_thursday">Thu</string>
    <string name="material_calendar_friday">Fri</string>
    <string name="material_calendar_saturday">Sat</string>
    <string name="material_calendar_sunday">Sun</string>

    <array name="material_calendar_months_array">
        <item>"JAN"</item>
        <item>"FEB"</item>
        <item>"MAR"</item>
        <item>"APR"</item>
        <item>"MAY"</item>
        <item>"JUN"</item>
        <item>"JUL"</item>
        <item>"AUG"</item>
        <item>"SEP"</item>
        <item>"OCT"</item>
        <item>"NOV"</item>
        <item>"DEC"</item>
    </array>
</resources>
